Adding a heading and list
This will add a heading titled 'Ingredients' under the description and create an unordered list with the ingredients for the recipe

--- a/recipes/flan.html
+++ b/recipes/flan.html
@@ -1,1 +1,4 @@
 <h1>Flan</h1>
+<img src="../images/Flan.jpeg" alt="Image of a small flan with berries next to it">
+<h2>Description</h2>
+<p>The recipe to make flan doesn't require too many ingredients, and should only take about an hour of your time!</p>
