Adding another heading and list
Adding another heading titled 'Steps' and creating an ordered list under that list

--- a/recipes/flan.html
+++ b/recipes/flan.html
@@ -1,4 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Odin Recipes</title>
+    </head>
+    <body>
 <h1>Flan</h1>
 <img src="../images/Flan.jpeg" alt="Image of a small flan with berries next to it">
 <h2>Description</h2>
 <p>The recipe to make flan doesn't require too many ingredients, and should only take about an hour of your time!</p>
+<h3>Ingredients</h3>
+<ul>
+    <li>1/2 cup sugar for caramel sauce</li>
+    <li>2 cups whipping cream</li>
+    <li>1 teaspoon vanilla extract</li>
+    <li>3 eggs</li>
+    <li>1/4 cup sugar for flan</li>
+    <li>1/2 cup blanched almonds for garnish (optional)</li>
+    <li>Sprig of mint for garnish (optional)</li>
+</ul>
+</body>
+
+</html>
