Adding another link and list
This will create a new link to another recipe, while also adding an unordered list to make sure that the recipes aren't bunched together

--- a/recipes/flan.html
+++ b/recipes/flan.html
@@ -19,6 +19,22 @@
     <li>1/2 cup blanched almonds for garnish (optional)</li>
     <li>Sprig of mint for garnish (optional)</li>
 </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Heat 4 cups to 5 cups of water in a pot on the back burner for the water bath</li>
+        <li>Put a heavy-bottom skillet or saucepan over medium heat for 30 seconds. Add 1/2 cup of sugar. With the back of a wooden spoon, keep sugar moving constantly until sugar is completely melted, and of a rich medium brown color (caramelized), as shown in the photo. This will serve as the sauce.</li>
+        <li>Carefully spoon caramelized sugar into each of the six ramekins or large dish.</li>
+        <li>Pre-heat oven to 325​ F.</li>
+        <li>Scald cream in a saucepan. (Keep a close eye on the pan, so the cream does not boil over.) Remove pan from ​the stove as soon as it boils.</li>
+        <li>While heating cream, slightly beat three eggs in a medium mixing bowl. Add 1/4 cup of sugar and stir.</li>
+        <li>Stirring constantly, gradually add hot cream to egg mixture. Stir until the sugar is dissolved. Stir in vanilla extract.</li>
+        <li>Carefully remove one or two ramekins to provide some extra room. Pour in hot water for water bath until water is about 1/2-inch deep in baking dish. Replace ramekins. (If using one large open baking dish, be sure that the dish is tall enough to accommodate the water necessary.)</li>
+        <li>Ladle mixture into ramekins.</li>
+        <li>Bake uncovered in water bath for 50 to 60 minutes, or until a knife comes out clean when inserted halfway between center and the edge of dish.</li>
+        <li>To ensure the custard does not over-cook, check doneness after 45 minutes, then every three to five minutes.</li>
+        <li>As soon as the dish is taken out of the oven, carefully remove each ramekin from the water bath. Set on a cooling rack until lukewarm, then chill thoroughly in the refrigerator. This usually takes at least 1 hour.</li>
+        <li>When ready to serve, unmold by running a knife around the inside edge of baking dish. Place a small dessert plate on the top of the ramekin. With one hand under the ramekin and the other on top of the place, turn over. Tap the ramekin and the flan should drop onto the plate. If it does not, carefully “prod” the flan out of the ramekin with a small paring knife. It should slide out of the ramekin onto the plate.</li>
+    </ol>
 </body>
 
 </html>
