--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/flan.html">Flan</a>
+        <ul>
+            <li><a href="./recipes/flan.html">Flan</a></li>
+            <li><a href="./recipes/pizzabread.html">Pizza Bread</a></li>
+        </ul>
+        
 
 
     </body>
