Added another heading and list
Added a heading under the description titled 'Ingredients' and created an unordered list for the ingredients

--- a/recipes/pizzabread.html
+++ b/recipes/pizzabread.html
@@ -10,6 +10,16 @@
         <img src="../images/pizzabread.jpeg" alt="Picture of Pizza bread that has pepperoni">
         <h2>Decription</h2>
         <p>This very short and simple recipe makes for a great snack without having to spend too much time or money!</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Small loaf of Italian Bread</li>
+            <li>Olive oil</li>
+            <li>Tomato Sauce</li>
+            <li>Grated Mozarella</li>
+            <li>Parmesan</li>
+            <li>Sliced Pepperoni</li>
+            <li>Oregano</li>
+        </ul>
     </body>
 
 </html>
