--- a/recipes/pizzabread.html
+++ b/recipes/pizzabread.html
@@ -20,6 +20,15 @@
             <li>Sliced Pepperoni</li>
             <li>Oregano</li>
         </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Halve a small loaf of Italian bread horizontally</li>
+            <li>Toast under the broiler</li>
+            <li>Brush with olive oil</li>
+            <li>Top with tomato sauce, grated mozzarella, parmesan and sliced pepperoni</li>
+            <li>Broil until bubbly</li>
+            <li>Sprinkle with dried oregano</li>
+        </ol>
     </body>
 
 </html>
