--- a/recipes/beanrollups.html
+++ b/recipes/beanrollups.html
@@ -5,6 +5,7 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        
+        <h1>Bean Roll Ups</h1>
+        <img src="../images/beanRollUps.jpeg" alt="Image of two small bean roll ups with salsa on top">
     </body>
 </html>
