--- a/recipes/beanrollups.html
+++ b/recipes/beanrollups.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Bean Roll Ups</h1>
         <img src="../images/beanRollUps.jpeg" alt="Image of two small bean roll ups with salsa on top">
+        <h2>Description</h2>
+        <p>A quick 10 minute dish for when you're in the mood for something spicy!</p>
     </body>
 </html>
