New heading and list
This will create a new heading titled 'Steps' and will create an ordered list with those steps

--- a/recipes/beanrollups.html
+++ b/recipes/beanrollups.html
@@ -17,5 +17,13 @@
             <li>Vegetable oil</li>
             <li>Salsa</li>
         </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Spread bean dip on a flour tortilla</li>
+            <li>Top with shredded cheddar and roll up</li>
+            <li>Brush with vegetable oil</li>
+            <li>Bake 10 minutes at 400 degrees</li>
+            <li>Serve with salsa</li>
+        </ol>
     </body>
 </html>
