--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="./recipes/flan.html">Flan</a></li>
             <li><a href="./recipes/pizzabread.html">Pizza Bread</a></li>
-            <li><a href="./recipes/beanrollups.html"Bean Roll Ups></a></li>
+            <li><a href="./recipes/beanrollups.html">Bean Roll Ups</a></li>
         </ul>
         
 
